Update text and teams

--- a/static/teams/theme-team.html
+++ b/static/teams/theme-team.html
@@ -9,10 +9,10 @@
           <img
             src="https://avatars.githubusercontent.com/u/43481325?u=abd6a16d90a864bde887199e0375699e3d05d915&v=4"
             loading="lazy"
-            alt="Avatar of None"
+            alt="Avatar of InessaPawson"
           />
         </div>
-        None
+        InessaPawson
       </a>
     </div>
 
@@ -61,10 +61,10 @@
           <img
             src="https://avatars.githubusercontent.com/u/46167686?u=529b2953f1c11efa4639df47ef6d403ba684163b&v=4"
             loading="lazy"
-            alt="Avatar of None"
+            alt="Avatar of MarsBarLee"
           />
         </div>
-        None
+        MarsBarLee
       </a>
     </div>
 
