--- a/static/teams/community-leaders.html
+++ b/static/teams/community-leaders.html
@@ -1,6 +1,6 @@
 
 <div class="team">
-  <h6 class="name title">Leadership Team</h6>
+  <h6 class="name title">Community Leaders</h6>
   <div class="members">
     
     <div class="member">
