--- a/static/teams/theme-team.html
+++ b/static/teams/theme-team.html
@@ -9,10 +9,10 @@
           <img
             src="https://avatars.githubusercontent.com/u/43481325?u=abd6a16d90a864bde887199e0375699e3d05d915&v=4"
             loading="lazy"
-            alt="Avatar of InessaPawson"
+            alt="Avatar of Inessa Pawson"
           />
         </div>
-        InessaPawson
+        Inessa Pawson
       </a>
     </div>
 
@@ -126,10 +126,10 @@
           <img
             src="https://avatars.githubusercontent.com/u/23188539?u=64445b52dbf3f75de8006ed4264fdd2afaed97a3&v=4"
             loading="lazy"
-            alt="Avatar of Pamphile ROY"
+            alt="Avatar of Pamphile Roy"
           />
         </div>
-        Pamphile ROY
+        Pamphile Roy
       </a>
     </div>
 
