--- a/static/teams/community-managers.html
+++ b/static/teams/community-managers.html
@@ -4,6 +4,19 @@
   <div class="members">
     
     <div class="member">
+      <a href="https://github.com/jarrodmillman" class="name">
+        <div class="photo">
+          <img
+            src="https://avatars.githubusercontent.com/u/123428?v=4"
+            loading="lazy"
+            alt="Avatar of Jarrod Millman"
+          />
+        </div>
+        Jarrod Millman
+      </a>
+    </div>
+
+    <div class="member">
       <a href="https://github.com/juanis2112" class="name">
         <div class="photo">
           <img
@@ -13,6 +26,32 @@
           />
         </div>
         Juanita Gomez
+      </a>
+    </div>
+
+    <div class="member">
+      <a href="https://github.com/kne42" class="name">
+        <div class="photo">
+          <img
+            src="https://avatars.githubusercontent.com/u/29165011?u=a9cad2941ed8ddec88ea9fc7523ff70433fce7e6&v=4"
+            loading="lazy"
+            alt="Avatar of Kira Evans"
+          />
+        </div>
+        Kira Evans
+      </a>
+    </div>
+
+    <div class="member">
+      <a href="https://github.com/melissawm" class="name">
+        <div class="photo">
+          <img
+            src="https://avatars.githubusercontent.com/u/3949932?u=aacac68df60d2cf64c17c7e5aa17adf8b738aa7b&v=4"
+            loading="lazy"
+            alt="Avatar of Melissa Weber Mendonça"
+          />
+        </div>
+        Melissa Weber Mendonça
       </a>
     </div>
 
@@ -39,6 +78,19 @@
           />
         </div>
         Ross Barnowski
+      </a>
+    </div>
+
+    <div class="member">
+      <a href="https://github.com/stefanv" class="name">
+        <div class="photo">
+          <img
+            src="https://avatars.githubusercontent.com/u/45071?u=c779b5e06448fbc638bc987cdfe305c7f9a7175e&v=4"
+            loading="lazy"
+            alt="Avatar of Stefan van der Walt"
+          />
+        </div>
+        Stefan van der Walt
       </a>
     </div>
 
