Update team pages

--- a/static/teams/community-managers.html
+++ b/static/teams/community-managers.html
@@ -56,6 +56,19 @@
     </div>
 
     <div class="member">
+      <a href="https://github.com/mkcor" class="name">
+        <div class="photo">
+          <img
+            src="https://avatars.githubusercontent.com/u/2227806?u=5320031216d435cd2bb0259a116a5623108c9b26&v=4"
+            loading="lazy"
+            alt="Avatar of Marianne Corvellec"
+          />
+        </div>
+        Marianne Corvellec
+      </a>
+    </div>
+
+    <div class="member">
       <a href="https://github.com/MridulS" class="name">
         <div class="photo">
           <img
