--- a/static/teams/community-managers.html
+++ b/static/teams/community-managers.html
@@ -107,6 +107,19 @@
       </a>
     </div>
 
+    <div class="member">
+      <a href="https://github.com/tupui" class="name">
+        <div class="photo">
+          <img
+            src="https://avatars.githubusercontent.com/u/23188539?u=64445b52dbf3f75de8006ed4264fdd2afaed97a3&v=4"
+            loading="lazy"
+            alt="Avatar of Pamphile Roy"
+          />
+        </div>
+        Pamphile Roy
+      </a>
+    </div>
+
   </div>
 </div>
 
