Update mail address for conduct reports

--- a/static/teams/community-leaders.html
+++ b/static/teams/community-leaders.html
@@ -1,6 +1,6 @@
 
 <div class="team">
-  <h3 class="name title">Community Leaders</h3>
+  <h3 id="community-leaders" class="name title">Community Leaders</h3>
   <div class="members">
 
     <div class="member">
