--- a/static/teams/spec-steering-committee.html
+++ b/static/teams/spec-steering-committee.html
@@ -1,6 +1,6 @@
 
 <div class="team">
-  <h3 class="name title">SPEC Steering Committee</h3>
+  <h3 id="spec-steering-committee" class="name title">SPEC Steering Committee</h3>
   <div class="members">
 
     <div class="member">
