--- a/static/teams/community-managers.html
+++ b/static/teams/community-managers.html
@@ -1,6 +1,6 @@
 
 <div class="team">
-  <h3 class="name title">Community Managers</h3>
+  <h3 id="community-managers" class="name title">Community Managers</h3>
   <div class="members">
 
     <div class="member">
