--- a/static/teams/community-managers.html
+++ b/static/teams/community-managers.html
@@ -4,6 +4,19 @@
   <div class="members">
 
     <div class="member">
+      <a href="https://github.com/davzaman" class="name">
+        <div class="photo">
+          <img
+            src="https://avatars.githubusercontent.com/u/5055644?u=6f173c252458b06645be90d69b9a220f08c81e7a&v=4"
+            loading="lazy"
+            alt="Avatar of Davina Zaman"
+          />
+        </div>
+        Davina Zaman
+      </a>
+    </div>
+
+    <div class="member">
       <a href="https://github.com/jarrodmillman" class="name">
         <div class="photo">
           <img
