--- a/static/teams/community-leaders.html
+++ b/static/teams/community-leaders.html
@@ -17,6 +17,19 @@
     </div>
 
     <div class="member">
+      <a href="https://github.com/juanis2112" class="name">
+        <div class="photo">
+          <img
+            src="https://avatars.githubusercontent.com/u/18587879?u=83f10fabe466ae8e7052c03c5e6e9cde684a4e10&v=4"
+            loading="lazy"
+            alt="Avatar of Juanita Gomez"
+          />
+        </div>
+        Juanita Gomez
+      </a>
+    </div>
+
+    <div class="member">
       <a href="https://github.com/melissawm" class="name">
         <div class="photo">
           <img
@@ -39,6 +52,19 @@
           />
         </div>
         Stefan van der Walt
+      </a>
+    </div>
+
+    <div class="member">
+      <a href="https://github.com/tupui" class="name">
+        <div class="photo">
+          <img
+            src="https://avatars.githubusercontent.com/u/23188539?u=64445b52dbf3f75de8006ed4264fdd2afaed97a3&v=4"
+            loading="lazy"
+            alt="Avatar of Pamphile Roy"
+          />
+        </div>
+        Pamphile Roy
       </a>
     </div>
 
