--- a/static/teams/spec-steering-committee.html
+++ b/static/teams/spec-steering-committee.html
@@ -4,6 +4,19 @@
   <div class="members">
 
     <div class="member">
+      <a href="https://github.com/andersy005" class="name">
+        <div class="photo">
+          <img
+            src="https://avatars.githubusercontent.com/u/13301940?u=70e16e6fe4d0b3b811b27c6d1353ac7648fbaac0&v=4"
+            loading="lazy"
+            alt="Avatar of Anderson Banihirwe"
+          />
+        </div>
+        Anderson Banihirwe
+      </a>
+    </div>
+
+    <div class="member">
       <a href="https://github.com/bsipocz" class="name">
         <div class="photo">
           <img
