--- a/static/teams/community-managers.html
+++ b/static/teams/community-managers.html
@@ -4,6 +4,19 @@
   <div class="members">
 
     <div class="member">
+      <a href="https://github.com/bsipocz" class="name">
+        <div class="photo">
+          <img
+            src="https://avatars.githubusercontent.com/u/6788290?u=d9a388224b87d55106cb3e6199d02ebc1d8e0553&v=4"
+            loading="lazy"
+            alt="Avatar of Brigitta Sipőcz"
+          />
+        </div>
+        Brigitta Sipőcz
+      </a>
+    </div>
+
+    <div class="member">
       <a href="https://github.com/davzaman" class="name">
         <div class="photo">
           <img
