--- a/static/teams/spec-steering-committee.html
+++ b/static/teams/spec-steering-committee.html
@@ -48,10 +48,10 @@
           <img
             src="https://avatars.githubusercontent.com/u/7579677?u=1ebcc2526a9787b4786c9383870c6b8fbad217d8&v=4"
             loading="lazy"
-            alt="Avatar of Georgiana Elena"
+            alt="Avatar of Georgiana"
           />
         </div>
-        Georgiana Elena
+        Georgiana
       </a>
     </div>
 
@@ -78,6 +78,19 @@
           />
         </div>
         Jarrod Millman
+      </a>
+    </div>
+
+    <div class="member">
+      <a href="https://github.com/jjerphan" class="name">
+        <div class="photo">
+          <img
+            src="https://avatars.githubusercontent.com/u/13029839?u=aee7a69f3452fa832a7d2dc39f6cce3bca5ab580&v=4"
+            loading="lazy"
+            alt="Avatar of Julien Jerphanion"
+          />
+        </div>
+        Julien Jerphanion
       </a>
     </div>
 
