--- a/static/teams/spec-steering-committee.html
+++ b/static/teams/spec-steering-committee.html
@@ -199,6 +199,19 @@
     </div>
 
     <div class="member">
+      <a href="https://github.com/pllim" class="name">
+        <div class="photo">
+          <img
+            src="https://avatars.githubusercontent.com/u/2090236?v=4"
+            loading="lazy"
+            alt="Avatar of P. L. Lim"
+          />
+        </div>
+        P. L. Lim
+      </a>
+    </div>
+
+    <div class="member">
       <a href="https://github.com/QuLogic" class="name">
         <div class="photo">
           <img
