--- a/static/teams/community-managers.html
+++ b/static/teams/community-managers.html
@@ -17,6 +17,19 @@
     </div>
 
     <div class="member">
+      <a href="https://github.com/crazy4pi314" class="name">
+        <div class="photo">
+          <img
+            src="https://avatars.githubusercontent.com/u/6486256?u=34be26023eb25da1c19a20e525af3da9277b52a2&v=4"
+            loading="lazy"
+            alt="Avatar of Sarah Kaiser"
+          />
+        </div>
+        Sarah Kaiser
+      </a>
+    </div>
+
+    <div class="member">
       <a href="https://github.com/davzaman" class="name">
         <div class="photo">
           <img
