--- a/static/teams/spec-steering-committee.html
+++ b/static/teams/spec-steering-committee.html
@@ -237,5 +237,18 @@
       </a>
     </div>
 
+    <div class="member">
+      <a href="https://github.com/stefanv" class="name">
+        <div class="photo">
+          <img
+            src="https://avatars.githubusercontent.com/u/45071?u=c779b5e06448fbc638bc987cdfe305c7f9a7175e&v=4"
+            loading="lazy"
+            alt="Avatar of Stefan van der Walt"
+          />
+        </div>
+        Stefan van der Walt
+      </a>
+    </div>
+
   </div>
 </div>
