--- a/static/teams/bots-graphs.html
+++ b/static/teams/bots-graphs.html
@@ -1,138 +1,173 @@
-  <div class='chart' id="keen-example-chart"> </div>
-  <div class="chart" id="backport-success">auto</div>
-  <div class="flex-container" style='height:340px'>
-    <div class="item initial chart" id="keen-chart-2">auto</div>
-    <div class="item auto chart" id="total-pr">auto</div>
-  </div>
-  <link href="https://d26b395fwzu5fz.cloudfront.net/keen-dataviz-1.1.3.css" rel="stylesheet" />
+<div class="chart" id="keen-example-chart"></div>
+<div class="chart" id="backport-success">auto</div>
+<div class="flex-container" style="height: 340px">
+  <div class="item initial chart" id="keen-chart-2">auto</div>
+  <div class="item auto chart" id="total-pr">auto</div>
+</div>
+<link
+  href="https://d26b395fwzu5fz.cloudfront.net/keen-dataviz-1.1.3.css"
+  rel="stylesheet"
+/>
 
-  <style>
+<style>
   .flex-container {
-  margin-left: 25px;
-  resize: horizontal;
-  overflow: hidden;
-  display: flex;
-}
+    margin-left: 25px;
+    resize: horizontal;
+    overflow: hidden;
+    display: flex;
+  }
 
-.initial {
-  flex: initial;
-}
+  .initial {
+    flex: initial;
+  }
 
-.auto {
-  width: 30%;
-  margin: 10px;
-  flex: auto;
-}
-
+  .auto {
+    width: 30%;
+    margin: 10px;
+    flex: auto;
+  }
 </style>
-  <script src="https://d26b395fwzu5fz.cloudfront.net/keen-analysis-1.2.2.js" type="text/javascript"></script>
-  <script src="https://d26b395fwzu5fz.cloudfront.net/keen-dataviz-1.1.3.js" type="text/javascript"></script>
-  <script type="text/javascript">
-    var client = new Keen({
-      projectId: "59e6286dc9e77c0001097979",
-      readKey: "3ED31C47C7576FB00C2150C4DFE176EC96B379CE631051B89F83243160668F201FF1FCE12B97A5B579B4ACDA4282CD71BE218EF858963B70E89ACDFAEFE80053E9B6900C2DA61BD277F107B05D3ED16240DC5527B3C9BCCA6895DA8CF479B9E3"
+<script
+  src="https://d26b395fwzu5fz.cloudfront.net/keen-analysis-1.2.2.js"
+  type="text/javascript"
+></script>
+<script
+  src="https://d26b395fwzu5fz.cloudfront.net/keen-dataviz-1.1.3.js"
+  type="text/javascript"
+></script>
+<script type="text/javascript">
+  var client = new Keen({
+    projectId: "59e6286dc9e77c0001097979",
+    readKey:
+      "3ED31C47C7576FB00C2150C4DFE176EC96B379CE631051B89F83243160668F201FF1FCE12B97A5B579B4ACDA4282CD71BE218EF858963B70E89ACDFAEFE80053E9B6900C2DA61BD277F107B05D3ED16240DC5527B3C9BCCA6895DA8CF479B9E3",
+  });
+
+  var chart = new Keen.Dataviz()
+    .el("#keen-example-chart")
+    .height(320)
+    .title("Activity / repository / week on a 52 week period")
+    .type("bar")
+    .stacked(true)
+    .prepare();
+
+  client
+    .query("count", {
+      event_collection: "dispatch",
+      filters: [
+        {
+          operator: "not_contains",
+          property_name: "mention.repository",
+          property_value: "/test1",
+        },
+      ],
+      group_by: ["mention.repository"],
+      interval: "weekly",
+      timeframe: "this_52_weeks",
+      timezone: "US/Pacific",
+    })
+    .then(function (res) {
+      chart.data(res).render();
+    })
+    .catch(function (err) {
+      chart.message(err.message);
     });
 
-    var chart = new Keen.Dataviz()
-      .el("#keen-example-chart")
-      .height(320)
-      .title("Activity / repository / week on a 52 week period")
-      .type("bar")
-      .stacked(true)
-      .prepare();
+  var chart2 = new Keen.Dataviz()
+    .el("#keen-chart-2")
+    .height(340)
+    .width("400px")
+    .title("Number of backport/Year/Project.")
+    .type("table")
+    .prepare();
 
-    client
-      .query("count", {
-        event_collection: "dispatch",
-        filters:[{"operator":"not_contains","property_name":"mention.repository","property_value":"/test1"}],
-        group_by: ["mention.repository"],
-        interval: "weekly",
-        timeframe: "this_52_weeks",
-        timezone: "US/Pacific"
-      })
-      .then(function(res) {
-        chart.data(res).render();
-      })
-      .catch(function(err) {
-        chart.message(err.message);
+  client
+    .query("count", {
+      event_collection: "dispatch",
+      filters: [
+        {
+          operator: "contains",
+          property_name: "mention.command",
+          property_value: "backport",
+        },
+      ],
+      group_by: ["mention.organisation"],
+      timeframe: "this_5_years",
+      timezone: "US/Pacific",
+    })
+    .then(function (res) {
+      var data = chart2.data(res);
+      console.log(data);
+      data.dataset = data.dataset.sortRows("desc", function (arr) {
+        console.log(arr);
+        return arr[1];
       });
+      data.dataset.matrix[0] = ["Organisation", "Backports"];
+      data.render();
+    })
+    .catch(function (err) {
+      chart2.message(err.message);
+    });
 
-    var chart2 = new Keen.Dataviz()
-      .el("#keen-chart-2")
-      .height(340)
-      .width('400px')
-      .title("Number of backport/Year/Project.")
-      .type("table")
-      .prepare();
+  var chart3 = new Keen.Dataviz()
+    .el("#total-pr")
+    .height(340)
+    .title("All attempted backports (excluding test repositories)")
+    .type("metric")
+    .prepare();
 
-    client
-      .query("count", {
-        event_collection: "dispatch",
-        filters: [{"operator":"contains","property_name":"mention.command","property_value":"backport"}],
-        group_by: ["mention.organisation"],
-        timeframe: "this_5_years",
-        timezone: "US/Pacific"
-      })
-      .then(function(res) {
-        var data = chart2.data(res);
-        console.log(data);
-        data.dataset = data.dataset.sortRows('desc', function(arr){
-              console.log(arr);
-              return arr[1]
-            }
-        );
-        data.dataset.matrix[0] = ['Organisation', 'Backports'];
-        data.render()
-      })
-      .catch(function(err) {
-        chart2.message(err.message);
-      });
+  client
+    .query("count", {
+      event_collection: "dispatch",
+      filters: [
+        {
+          operator: "contains",
+          property_name: "mention.command",
+          property_value: "backport",
+        },
+        {
+          operator: "not_contains",
+          property_name: "mention.repository",
+          property_value: "test1",
+        },
+      ],
+      timeframe: "this_14_years",
+      timezone: "US/Pacific",
+    })
+    .then(function (res) {
+      chart3.data(res).render();
+    })
+    .catch(function (err) {
+      chart3.message(err.message);
+    });
 
+  var chart4 = new Keen.Dataviz()
+    .el("#backport-success")
+    .height(240)
+    .title("Backport Success")
+    .stacked(true)
+    .type("columnchart")
+    .prepare();
 
-    var chart3 = new Keen.Dataviz()
-      .el("#total-pr")
-      .height(340)
-      .title("All attempted backports (excluding test repositories)")
-      .type("metric")
-      .prepare();
-
-    client
-      .query("count", {
-        event_collection: "dispatch",
-        filters: [{"operator":"contains","property_name":"mention.command","property_value":"backport"},{"operator":"not_contains","property_name":"mention.repository","property_value":"test1"}],
-        timeframe: "this_14_years",
-        timezone: "US/Pacific"
-      })
-      .then(function(res) {
-        chart3.data(res).render();
-      })
-      .catch(function(err) {
-        chart3.message(err.message);
-      });
-
-
-   var chart4 = new Keen.Dataviz()
-      .el("#backport-success")
-      .height(240)
-      .title("Backport Success")
-      .stacked(true)
-      .type("columnchart")
-      .prepare();
-
-    client
-      .query("count", {
-        event_collection: "backport_stats",
-        filters: [{"operator":"not_contains","property_name":"slug","property_value":"test1"},{"operator":"ne","property_name":"reason","property_value":"Sucess"}],
-        group_by: ["reason"],
-        interval: "weekly",
-        timeframe: "this_52_weeks",
-        timezone: "US/Pacific"
-      })
-      .then(function(res) {
-        chart4.data(res).render();
-      })
-      .catch(function(err) {
-        chart.message(err.message);
-      });
-
-  </script>
+  client
+    .query("count", {
+      event_collection: "backport_stats",
+      filters: [
+        {
+          operator: "not_contains",
+          property_name: "slug",
+          property_value: "test1",
+        },
+        { operator: "ne", property_name: "reason", property_value: "Sucess" },
+      ],
+      group_by: ["reason"],
+      interval: "weekly",
+      timeframe: "this_52_weeks",
+      timezone: "US/Pacific",
+    })
+    .then(function (res) {
+      chart4.data(res).render();
+    })
+    .catch(function (err) {
+      chart.message(err.message);
+    });
+</script>
