--- a/static/teams/spec-steering-committee.html
+++ b/static/teams/spec-steering-committee.html
@@ -56,6 +56,19 @@
     </div>
 
     <div class="member">
+      <a href="https://github.com/InessaPawson" class="name">
+        <div class="photo">
+          <img
+            src="https://avatars.githubusercontent.com/u/43481325?u=8c0c0adbf3f2efd2cce72951d3554064c7bbfce3&v=4"
+            loading="lazy"
+            alt="Avatar of Inessa Pawson"
+          />
+        </div>
+        Inessa Pawson
+      </a>
+    </div>
+
+    <div class="member">
       <a href="https://github.com/ivanov" class="name">
         <div class="photo">
           <img
@@ -78,19 +91,6 @@
           />
         </div>
         Jarrod Millman
-      </a>
-    </div>
-
-    <div class="member">
-      <a href="https://github.com/jjerphan" class="name">
-        <div class="photo">
-          <img
-            src="https://avatars.githubusercontent.com/u/13029839?u=aee7a69f3452fa832a7d2dc39f6cce3bca5ab580&v=4"
-            loading="lazy"
-            alt="Avatar of Julien Jerphanion"
-          />
-        </div>
-        Julien Jerphanion
       </a>
     </div>
 
@@ -160,6 +160,19 @@
     </div>
 
     <div class="member">
+      <a href="https://github.com/lagru" class="name">
+        <div class="photo">
+          <img
+            src="https://avatars.githubusercontent.com/u/20140352?u=fa6debadd435c15847d1435c49753f349e2d3526&v=4"
+            loading="lazy"
+            alt="Avatar of Lars Grüter"
+          />
+        </div>
+        Lars Grüter
+      </a>
+    </div>
+
+    <div class="member">
       <a href="https://github.com/lucyleeow" class="name">
         <div class="photo">
           <img
@@ -173,15 +186,28 @@
     </div>
 
     <div class="member">
-      <a href="https://github.com/melissawm" class="name">
+      <a href="https://github.com/MridulS" class="name">
         <div class="photo">
           <img
-            src="https://avatars.githubusercontent.com/u/3949932?u=aacac68df60d2cf64c17c7e5aa17adf8b738aa7b&v=4"
+            src="https://avatars.githubusercontent.com/u/5363860?u=ce5c6e9388d2fd153ebf8b0bb521c928b0813608&v=4"
             loading="lazy"
-            alt="Avatar of Melissa Weber Mendonça"
+            alt="Avatar of Mridul Seth"
           />
         </div>
-        Melissa Weber Mendonça
+        Mridul Seth
+      </a>
+    </div>
+
+    <div class="member">
+      <a href="https://github.com/MSanKeys963" class="name">
+        <div class="photo">
+          <img
+            src="https://avatars.githubusercontent.com/u/20305658?u=0305891289a16b2111326053c0f3746fb5218fa7&v=4"
+            loading="lazy"
+            alt="Avatar of Sanket Verma"
+          />
+        </div>
+        Sanket Verma
       </a>
     </div>
 
@@ -212,19 +238,6 @@
     </div>
 
     <div class="member">
-      <a href="https://github.com/QuLogic" class="name">
-        <div class="photo">
-          <img
-            src="https://avatars.githubusercontent.com/u/302469?v=4"
-            loading="lazy"
-            alt="Avatar of Elliott Sales de Andrade"
-          />
-        </div>
-        Elliott Sales de Andrade
-      </a>
-    </div>
-
-    <div class="member">
       <a href="https://github.com/rgommers" class="name">
         <div class="photo">
           <img
@@ -238,6 +251,19 @@
     </div>
 
     <div class="member">
+      <a href="https://github.com/rossbar" class="name">
+        <div class="photo">
+          <img
+            src="https://avatars.githubusercontent.com/u/1268991?u=974707b96081a9705f3a239c0773320f353ee02f&v=4"
+            loading="lazy"
+            alt="Avatar of Ross Barnowski"
+          />
+        </div>
+        Ross Barnowski
+      </a>
+    </div>
+
+    <div class="member">
       <a href="https://github.com/stefanv" class="name">
         <div class="photo">
           <img
@@ -247,6 +273,19 @@
           />
         </div>
         Stefan van der Walt
+      </a>
+    </div>
+
+    <div class="member">
+      <a href="https://github.com/tupui" class="name">
+        <div class="photo">
+          <img
+            src="https://avatars.githubusercontent.com/u/23188539?u=64445b52dbf3f75de8006ed4264fdd2afaed97a3&v=4"
+            loading="lazy"
+            alt="Avatar of Pamphile Roy"
+          />
+        </div>
+        Pamphile Roy
       </a>
     </div>
 
