Use more specific class names in team gallery
Follow-up on
https://github.com/scientific-python/scientific-python-hugo-theme/pull/356

Closes https://github.com/scientific-python/scientific-python-hugo-theme/issues/339

--- a/static/teams/community-leaders.html
+++ b/static/teams/community-leaders.html
@@ -1,11 +1,11 @@
 
 <div class="team">
-  <h3 id="community-leaders" class="name title">Community Leaders</h3>
-  <div class="members">
+  <h3 id="community-leaders" class="team-name">Community Leaders</h3>
+  <div class="team-members">
 
-    <div class="member">
-      <a href="https://github.com/bsipocz" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/bsipocz" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/6788290?u=d9a388224b87d55106cb3e6199d02ebc1d8e0553&v=4"
             loading="lazy"
@@ -16,9 +16,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/jarrodmillman" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/jarrodmillman" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/123428?v=4"
             loading="lazy"
@@ -29,9 +29,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/juanis2112" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/juanis2112" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/18587879?u=83f10fabe466ae8e7052c03c5e6e9cde684a4e10&v=4"
             loading="lazy"
@@ -42,9 +42,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/stefanv" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/stefanv" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/45071?u=c779b5e06448fbc638bc987cdfe305c7f9a7175e&v=4"
             loading="lazy"
@@ -55,9 +55,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/tupui" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/tupui" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/23188539?u=64445b52dbf3f75de8006ed4264fdd2afaed97a3&v=4"
             loading="lazy"
