--- a/static/teams/emeritus-community-leaders.html
+++ b/static/teams/emeritus-community-leaders.html
@@ -1,11 +1,11 @@
 
 <div class="team">
-  <h3 id="emeritus-community-leaders" class="name title">Emeritus Community Leaders</h3>
-  <div class="members">
+  <h3 id="emeritus-community-leaders" class="team-name">Emeritus Community Leaders</h3>
+  <div class="team-members">
 
-    <div class="member">
-      <a href="https://github.com/melissawm" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/melissawm" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/3949932?u=aacac68df60d2cf64c17c7e5aa17adf8b738aa7b&v=4"
             loading="lazy"
