--- a/static/teams/community-managers.html
+++ b/static/teams/community-managers.html
@@ -1,11 +1,11 @@
 
 <div class="team">
-  <h3 id="community-managers" class="name title">Community Managers</h3>
-  <div class="members">
+  <h3 id="community-managers" class="team-name">Community Managers</h3>
+  <div class="team-members">
 
-    <div class="member">
-      <a href="https://github.com/bsipocz" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/bsipocz" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/6788290?u=d9a388224b87d55106cb3e6199d02ebc1d8e0553&v=4"
             loading="lazy"
@@ -16,9 +16,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/crazy4pi314" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/crazy4pi314" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/6486256?u=34be26023eb25da1c19a20e525af3da9277b52a2&v=4"
             loading="lazy"
@@ -29,9 +29,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/davzaman" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/davzaman" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/5055644?u=6f173c252458b06645be90d69b9a220f08c81e7a&v=4"
             loading="lazy"
@@ -42,9 +42,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/jarrodmillman" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/jarrodmillman" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/123428?v=4"
             loading="lazy"
@@ -55,9 +55,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/juanis2112" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/juanis2112" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/18587879?u=83f10fabe466ae8e7052c03c5e6e9cde684a4e10&v=4"
             loading="lazy"
@@ -68,9 +68,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/kne42" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/kne42" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/29165011?u=a9cad2941ed8ddec88ea9fc7523ff70433fce7e6&v=4"
             loading="lazy"
@@ -81,9 +81,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/melissawm" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/melissawm" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/3949932?u=aacac68df60d2cf64c17c7e5aa17adf8b738aa7b&v=4"
             loading="lazy"
@@ -94,9 +94,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/mkcor" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/mkcor" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/2227806?u=5320031216d435cd2bb0259a116a5623108c9b26&v=4"
             loading="lazy"
@@ -107,9 +107,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/MridulS" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/MridulS" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/5363860?u=ce5c6e9388d2fd153ebf8b0bb521c928b0813608&v=4"
             loading="lazy"
@@ -120,9 +120,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/rossbar" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/rossbar" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/1268991?u=974707b96081a9705f3a239c0773320f353ee02f&v=4"
             loading="lazy"
@@ -133,9 +133,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/stefanv" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/stefanv" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/45071?u=c779b5e06448fbc638bc987cdfe305c7f9a7175e&v=4"
             loading="lazy"
@@ -146,9 +146,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/tupui" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/tupui" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/23188539?u=64445b52dbf3f75de8006ed4264fdd2afaed97a3&v=4"
             loading="lazy"
