--- a/static/teams/spec-steering-committee.html
+++ b/static/teams/spec-steering-committee.html
@@ -1,11 +1,11 @@
 
 <div class="team">
-  <h3 id="spec-steering-committee" class="name title">SPEC Steering Committee</h3>
-  <div class="members">
+  <h3 id="spec-steering-committee" class="team-name">SPEC Steering Committee</h3>
+  <div class="team-members">
 
-    <div class="member">
-      <a href="https://github.com/andersy005" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/andersy005" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/13301940?u=70e16e6fe4d0b3b811b27c6d1353ac7648fbaac0&v=4"
             loading="lazy"
@@ -16,9 +16,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/bsipocz" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/bsipocz" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/6788290?u=d9a388224b87d55106cb3e6199d02ebc1d8e0553&v=4"
             loading="lazy"
@@ -29,9 +29,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/Carreau" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/Carreau" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/335567?v=4"
             loading="lazy"
@@ -42,9 +42,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/GeorgianaElena" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/GeorgianaElena" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/7579677?u=1ebcc2526a9787b4786c9383870c6b8fbad217d8&v=4"
             loading="lazy"
@@ -55,9 +55,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/InessaPawson" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/InessaPawson" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/43481325?u=8c0c0adbf3f2efd2cce72951d3554064c7bbfce3&v=4"
             loading="lazy"
@@ -68,9 +68,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/ivanov" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/ivanov" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/118211?u=df34f29e82134879f506869b2af3252e35db6bb4&v=4"
             loading="lazy"
@@ -81,9 +81,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/jarrodmillman" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/jarrodmillman" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/123428?v=4"
             loading="lazy"
@@ -94,9 +94,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/jni" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/jni" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/492549?v=4"
             loading="lazy"
@@ -107,9 +107,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/jorisvandenbossche" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/jorisvandenbossche" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/1020496?u=c30d768880284601483689157e4114351815044b&v=4"
             loading="lazy"
@@ -120,9 +120,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/juanis2112" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/juanis2112" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/18587879?u=83f10fabe466ae8e7052c03c5e6e9cde684a4e10&v=4"
             loading="lazy"
@@ -133,9 +133,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/kne42" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/kne42" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/29165011?u=a9cad2941ed8ddec88ea9fc7523ff70433fce7e6&v=4"
             loading="lazy"
@@ -146,9 +146,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/kthyng" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/kthyng" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/3487237?v=4"
             loading="lazy"
@@ -159,9 +159,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/lagru" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/lagru" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/20140352?u=fa6debadd435c15847d1435c49753f349e2d3526&v=4"
             loading="lazy"
@@ -172,9 +172,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/MridulS" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/MridulS" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/5363860?u=ce5c6e9388d2fd153ebf8b0bb521c928b0813608&v=4"
             loading="lazy"
@@ -185,9 +185,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/MSanKeys963" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/MSanKeys963" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/20305658?u=0305891289a16b2111326053c0f3746fb5218fa7&v=4"
             loading="lazy"
@@ -198,9 +198,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/munkm" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/munkm" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/6745434?v=4"
             loading="lazy"
@@ -211,9 +211,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/pllim" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/pllim" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/2090236?v=4"
             loading="lazy"
@@ -224,9 +224,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/rgommers" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/rgommers" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/98330?u=22a023f8d191ba200ab13d476c83860d015cc9fe&v=4"
             loading="lazy"
@@ -237,9 +237,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/rossbar" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/rossbar" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/1268991?u=974707b96081a9705f3a239c0773320f353ee02f&v=4"
             loading="lazy"
@@ -250,9 +250,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/stefanv" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/stefanv" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/45071?u=c779b5e06448fbc638bc987cdfe305c7f9a7175e&v=4"
             loading="lazy"
@@ -263,9 +263,9 @@
       </a>
     </div>
 
-    <div class="member">
-      <a href="https://github.com/tupui" class="name">
-        <div class="photo">
+    <div class="team-member">
+      <a href="https://github.com/tupui" class="team-member-name">
+        <div class="team-member-photo">
           <img
             src="https://avatars.githubusercontent.com/u/23188539?u=64445b52dbf3f75de8006ed4264fdd2afaed97a3&v=4"
             loading="lazy"
